--- a/Jarvis assistant.ipynb
+++ b/Jarvis assistant.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "3c4d5908",
    "metadata": {},
    "outputs": [
@@ -11,10 +11,7 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting speechRecognition\n",
-      "  Using cached SpeechRecognition-3.8.1-py2.py3-none-any.whl (32.8 MB)\n",
-      "Installing collected packages: speechRecognition\n",
-      "Successfully installed speechRecognition-3.8.1\n"
+      "Requirement already satisfied: speechRecognition in c:\\users\\koche\\appdata\\roaming\\python\\python38\\site-packages (3.8.1)\n"
      ]
     }
    ],
@@ -24,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "22346525",
    "metadata": {},
    "outputs": [
@@ -34,8 +31,7 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Processing c:\\users\\koche\\pipwin\\pyaudio-0.2.11-cp38-cp38-win32.whl\n",
-      "Installing collected packages: PyAudio\n",
-      "Successfully installed PyAudio-0.2.11\n",
+      "PyAudio is already installed with the same version as the provided wheel. Use --force-reinstall to force an installation of the wheel.\n",
       "Package `pyaudio` found in cache\n",
       "Downloading package . . .\n",
       "https://download.lfd.uci.edu/pythonlibs/y2rycu7g/PyAudio-0.2.11-cp38-cp38-win32.whl\n",
@@ -50,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "dbee845a",
    "metadata": {},
    "outputs": [],
@@ -60,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "a5ed7c4d",
    "metadata": {},
    "outputs": [],
@@ -93,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "f67dede7",
    "metadata": {},
    "outputs": [],
@@ -103,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "2b28e574",
    "metadata": {},
    "outputs": [],
@@ -113,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "ce3a6f5d",
    "metadata": {},
    "outputs": [],
@@ -132,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "84963212",
    "metadata": {},
    "outputs": [],
@@ -156,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "e22a75c1",
    "metadata": {},
    "outputs": [
@@ -165,20 +161,14 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting wikipedia\n",
-      "  Downloading wikipedia-1.4.0.tar.gz (27 kB)\n",
+      "Requirement already satisfied: wikipedia in c:\\users\\koche\\appdata\\roaming\\python\\python38\\site-packages (1.4.0)\n",
       "Requirement already satisfied: beautifulsoup4 in c:\\users\\koche\\appdata\\roaming\\python\\python38\\site-packages (from wikipedia) (4.10.0)\n",
       "Requirement already satisfied: requests<3.0.0,>=2.0.0 in c:\\users\\koche\\appdata\\roaming\\python\\python38\\site-packages (from wikipedia) (2.24.0)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in c:\\users\\koche\\appdata\\roaming\\python\\python38\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (3.0.4)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\koche\\appdata\\roaming\\python\\python38\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2020.6.20)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\koche\\appdata\\roaming\\python\\python38\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (1.25.11)\n",
       "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\koche\\appdata\\roaming\\python\\python38\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (2.10)\n",
-      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\koche\\appdata\\roaming\\python\\python38\\site-packages (from beautifulsoup4->wikipedia) (2.2.1)\n",
-      "Using legacy 'setup.py install' for wikipedia, since package 'wheel' is not installed.\n",
-      "Installing collected packages: wikipedia\n",
-      "    Running setup.py install for wikipedia: started\n",
-      "    Running setup.py install for wikipedia: finished with status 'done'\n",
-      "Successfully installed wikipedia-1.4.0\n"
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\koche\\appdata\\roaming\\python\\python38\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (1.25.11)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in c:\\users\\koche\\appdata\\roaming\\python\\python38\\site-packages (from requests<3.0.0,>=2.0.0->wikipedia) (3.0.4)\n",
+      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\koche\\appdata\\roaming\\python\\python38\\site-packages (from beautifulsoup4->wikipedia) (2.2.1)\n"
      ]
     }
    ],
@@ -188,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "07b16e73",
    "metadata": {},
    "outputs": [],
@@ -200,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "c0eca413",
    "metadata": {},
    "outputs": [
@@ -210,15 +200,16 @@
      "text": [
       "Listening...\n",
       "Recognizing...\n",
-      "User said: open spotify\n",
+      "User said: quit\n",
       "\n"
      ]
     }
    ],
    "source": [
     "if __name__ ==\"__main__\":\n",
+    "    count=1;\n",
     "    wishMe()\n",
-    "    if 1:\n",
+    "    if count==1:\n",
     "        query=takeCommand().lower()\n",
     "        \n",
     "        if 'wikipedia' in query:\n",
@@ -242,7 +233,11 @@
     "        elif 'the time' in query:\n",
     "            strTime=datetime.datetime.now().strftime(\"%H:%M:%S\")\n",
     "            print(strTime)\n",
-    "            speak(f\"The time is {strTime}\")"
+    "            speak(f\"The time is {strTime}\")\n",
+    "            \n",
+    "        elif 'quit' in query:\n",
+    "            speak(\"Thank you!! Quitting Jarvis\");\n",
+    "            count=0;"
    ]
   },
   {
